[tool.poetry]
name = "aiogram_message_broker"
version = "0.1.0"
description = ""
authors = ["darksidecat <bitalik371@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = {git = "https://github.com/aiogram/aiogram.git", rev = "dev-3.x"}
aio-pika = "^6.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
